# poker-solver

./: LICENSE  pyproject.toml
poker_tui/: cli.py
poker_tui/domain/: __init__.py  action.py  card.py  card_utils.py  deck.py  enums.py  hand.py  money.py  player.py  table.py
poker_tui/engine/: __init__.py  betting.py  events.py  game_engine.py  hand_evaluator.py  public_state.py  state.py  visibility.py
poker_tui/simulation/: __init__.py  result.py  runner.py  stats.py
poker_tui/storage/: __init__.py  base.py  json_storage.py
poker_tui/strategies/: __init__.py  base.py  placeholder.py  registry.py  simple.py
poker_tui/tui/: theme.py
poker_tui/tui/apps/: observe_app.py  play_app.py  simulate_app.py  stats_app.py  table_render.py
poker_tui/tui/widgets/: action_log_widget.py  action_panel_widget.py  card_render.py  chart_widget.py  community_cards_widget.py  player_seat_widget.py  pot_widget.py  stats_widget.py  table_widget.py
tests/: test_betting.py  test_deck.py  test_engine.py  test_hand_evaluator.py  test_simulation.py  test_storage.py  test_strategies.py  test_visibility.py
