[project]
name = "poker-tui"
version = "0.1.0"
description = "Texas Hold'em poker engine with Textual TUI"
requires-python = ">=3.12"
dependencies = [
    "textual>=1.0.0",
    "typer>=0.12.0",
]

[project.scripts]
poker = "poker_tui.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["poker_tui"]

[tool.uv]
package = true

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
