[project]
name = "poker-tui"
version = "0.1.0"
description = "Texas Hold'em poker engine with Textual TUI"
requires-python = ">=3.12"
dependencies = [
    "textual>=1.0.0",
    "typer>=0.12.0",
]

[project.scripts]
poker = "poker_tui.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["poker_tui"]

[tool.uv]
package = true

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]
